--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "name": "Notex",
   "short_name": "Notex",
   "description": "Minimalist Markdown editor with URL sharing",
-  "start_url": "/",
-  "scope": "/",
+  "start_url": "/notex/",
+  "scope": "/notex/",
   "display": "standalone",
   "background_color": "#0d1117",
   "theme_color": "#0d1117",
